# gaia

./: .gitignore  CMakeLists.txt  README.md
GaiaLib/: CMakeLists.txt  GaiaApplication.cc  ICode.cpp  ICode.h  def.cpp  def.h  gaia.cpp  gaia.h  gaiaobject.cpp  gaiaobject.h  gaiastring.cpp  gaiastring.h  gaiavalue.cpp  gaiavalue.h  lexer.cpp  lexer.h  list.h  localfunction.cpp  localfunction.h  main.cpp  memorypool.cpp  memorypool.h  parse.cpp  parse.h  runtime.cpp  runtime.h  stream.cpp  stream.h
test/: fibonacci.gaia  test.gaia
