

add_executable(Gaia 
GaiaApplication.cc
script.cpp
gaiaobject.cpp
gaiastring.cpp
gaiavalue.cpp
global.cpp
ICode.cpp
lexer.cpp
list.cpp
localfunction.cpp
memorypool.cpp
parse.cpp
runtime.cpp
stream.cpp

script.h
gaiaobject.h
gaiastring.h
gaiavalue.h
global.h
ICode.h
lexer.h
list.h
localfunction.h
memorypool.h
parse.h
runtime.h
stream.h
)
