

add_executable(Gaia 
GaiaApplication.cc
gaia.cpp
gaiaobject.cpp
gaiastring.cpp
gaiavalue.cpp
def.cpp
ICode.cpp
lexer.cpp
list.cpp
localfunction.cpp
memorypool.cpp
parse.cpp
runtime.cpp
stream.cpp

gaia.h
gaiaobject.h
gaiastring.h
gaiavalue.h
def.h
ICode.h
lexer.h
list.h
localfunction.h
memorypool.h
parse.h
runtime.h
stream.h
)
